# aoc-manyworlds-archi

./: .gitignore  Cargo.toml  LICENSE  README.md
aoc-manyworlds/: Create.py  __init__.py  archipelago.json
aoc-manyworlds/docs/: en_Advent of Code 2019 Day 18 Part 2.md  fr_Advent of Code 2019 Day 18 Part 2.md  setup_en.md  setup_fr.md
src/: main.rs
