[package]
name = "aoc-manyworlds-archi"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
rand_chacha = "0.9.0"
archipelago_rs = { git = "https://github.com/nex3/archipelago_rs/" }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
futures-util = "0.3.31"
futures-timer = "3.0.3"
